--- a/cfg/gmodserver.cfg
+++ b/cfg/gmodserver.cfg
@@ -56,7 +56,7 @@ sv_client_min_interp_ratio 0
 
 //Change this for FastDL
 sv_downloadurl "https://main.fastdl.me/"
-sv_loadingurl "https://i.imgur.com/ZmAxEzn.png"
+sv_loadingurl "https://i.imgur.com/3sS5K9O.png"
 
 // Rcon Stuff
 rcon_password ""
