--- a/other/rawinput2.cfg
+++ b/other/rawinput2.cfg
@@ -1,4 +1,5 @@
 Set Garry's Mod and Counter-Striek: Source to -multirun in Game Command Lanuch
+Run GMod in -insecure
 
 1. Start up CS:S
 1. Run rawinput2.exe on CS:S
