--- a/config-lgsm/gmodserver/_default.cfg
+++ b/config-lgsm/gmodserver/_default.cfg
@@ -27,7 +27,7 @@ wscollectionid=""
 gslt=""
 
 ## Server Parameters | https://docs.linuxgsm.com/configuration/start-parameters#additional-parameters
-startparameters="-game garrysmod -insecure +sv_maxspeed 80000000000000000000000000000000000000 -strictportbind -ip ${ip} -port ${port} -tickrate ${tickrate} +host_workshop_collection ${wscollectionid} +clientport ${clientport} +tv_port ${sourcetvport} +gamemode ${gamemode} +map ${defaultmap} +sv_setsteamaccount ${gslt} +servercfgfile ${servercfg} -maxplayers ${maxplayers}"
+startparameters="-game garrysmod -insecure +sv_maxspeed 80000000000000000000000000000000000000 -disableluarefresh -strictportbind -ip ${ip} -port ${port} -tickrate ${tickrate} +host_workshop_collection ${wscollectionid} +clientport ${clientport} +tv_port ${sourcetvport} +gamemode ${gamemode} +map ${defaultmap} +sv_setsteamaccount ${gslt} +servercfgfile ${servercfg} -maxplayers ${maxplayers}"
 
 #### LinuxGSM Settings ####
 
